Initialisation Projet QSwarm

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 # Example .gitignore files: https://github.com/github/gitignore
 /bower_components/
 /node_modules/
+/.tmp/
+src/main/resources/web/index.html
+
+src/main/resources/web/index.tmp
