--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "grunt-rev": "~0.1.0",
     "grunt-run": "^0.3.0",
     "grunt-scriptlinker": "0.1.1",
+    "grunt-surge": "^0.5.2",
     "grunt-usemin": "~3.0.0",
     "grunt-wiredep": "2.0.0",
     "matchdep": "^0.3.0"
