--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-ng-config": "^1.2.1",
     "gulp-protractor": "~0.0.12",
     "gulp-rename": "~1.2.0",
-    "gulp-replace": "~0.5.0",
+    "gulp-replace": "^0.5.3",
     "gulp-rev": "~3.0.1",
     "gulp-rev-replace": "~0.3.1",
     "gulp-size": "~1.2.0",
