--- a/bower.json
+++ b/bower.json
@@ -44,7 +44,8 @@
     "sugar": "1.4.1",
     "toastr": "2.1.0",
     "html5shiv": "~3.7.2",
-    "respond": "~1.4.2"
+    "respond": "~1.4.2",
+    "ngAutocomplete": "~1.0.0"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
