--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
     "test": "gulp test"
   },
   "devDependencies": {
-    "browser-sync": "~2.1.4",
+    "browser-sync": "^2.8.0",
     "browser-sync-spa": "~1.0.2",
     "chalk": "~0.5.1",
     "concat-stream": "~1.4.7",
     "del": "~1.1.1",
-    "gulp": "~3.9.0",
+    "gulp": "^3.9.0",
     "gulp-angular-filesort": "~1.0.4",
     "gulp-angular-templatecache": "~1.5.0",
     "gulp-autoprefixer": "~2.1.0",
