--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,8 @@
     "toastr": "2.1.0",
     "html5shiv": "~3.7.2",
     "respond": "~1.4.2",
-    "ngAutocomplete": "~1.0.0"
+    "ngAutocomplete": "~1.0.0",
+    "angular-ui-mask": "~1.3.0"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
