--- a/bower.json
+++ b/bower.json
@@ -46,7 +46,8 @@
     "html5shiv": "~3.7.2",
     "respond": "~1.4.2",
     "ngAutocomplete": "~1.0.0",
-    "angular-ui-mask": "~1.3.0"
+    "angular-ui-mask": "~1.3.0",
+    "ng-tags-input": "~3.0.0"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
