--- a/bower.json
+++ b/bower.json
@@ -47,7 +47,7 @@
     "respond": "~1.4.2",
     "ngAutocomplete": "~1.0.0",
     "angular-ui-mask": "~1.3.0",
-    "ng-tags-input": "~3.0.0"
+    "isteven-angular-multiselect": "~4.0.0"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
