--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "chalk": "~0.5.1",
     "concat-stream": "~1.4.7",
     "del": "~1.1.1",
-    "gulp": "^3.9.0",
+    "gulp": "~3.9.0",
     "gulp-angular-filesort": "~1.0.4",
     "gulp-angular-templatecache": "~1.5.0",
     "gulp-autoprefixer": "~2.1.0",
@@ -65,5 +65,6 @@
     "node": ">=0.10.0"
   },
   "author": "Qaobee Inc",
-  "license": "BSD-2-Clause"
+  "license": "BSD-2-Clause",
+  "dependencies": {}
 }
