--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # https://git-scm.com/docs/gitignore
 # https://help.github.com/articles/ignoring-files
 # Example .gitignore files: https://github.com/github/gitignore
-/bower_components/
-/node_modules/
-/.tmp/
+bower_components/
+node_modules/
+.tmp/
 src/main/resources/web/index.html
-
+docs
 src/main/resources/web/index.tmp
-/src/main/resources/web/fonts/
-/src/main/resources/web/js/libs/
+src/main/resources/web/fonts/
+src/main/resources/web/js/libs/
 .idea
 npm-debug.log
 bower_components
