--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "gulp-filter": "~2.0.2",
     "gulp-flatten": "~0.0.4",
     "gulp-inject": "~1.1.1",
+    "gulp-jsdoc": "^0.1.4",
     "gulp-jshint": "~1.9.0",
     "gulp-load-plugins": "~0.8.0",
     "gulp-minify-html": "~0.1.7",
     "gulp-ng-annotate": "~0.5.2",
     "gulp-ng-config": "^1.2.1",
+    "gulp-plato": "^1.0.2",
     "gulp-protractor": "~0.0.12",
     "gulp-rename": "~1.2.0",
     "gulp-replace": "^0.5.3",
@@ -50,6 +52,7 @@
     "lodash": "~3.2.0",
     "main-bower-files": "~2.5.0",
     "merge-stream": "~0.1.7",
+    "plato": "^1.5.0",
     "protractor": "~1.7.0",
     "require-dir": "~0.1.0",
     "uglify-save-license": "~0.4.1",
