--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,5 @@ job1:
     - gulp
     - gulp plato
     - gulp jsdoc
+    - git_stats generate -o docs/git
     - lftp ftp://heber_15054748:zaza666@ftp.hebergratuit.net -e "mirror -e -R --parallel=20 --only-newer --verbose docs /htdocs/qswarm-web/docs; quit"
