--- a/bower.json
+++ b/bower.json
@@ -47,8 +47,7 @@
     "respond": "~1.4.2",
     "ngAutocomplete": "~1.0.0",
     "angular-ui-mask": "~1.3.0",
-    "angular-selection-model": "~0.8.4",
-    "angular-ui-calendar": "~1.0.1"
+    "angular-selection-model": "~0.8.4"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
