--- a/bower.json
+++ b/bower.json
@@ -24,31 +24,32 @@
     "angular-dynamic-locale": "0.1.27",
     "angular-file-upload": "2.1.1",
     "angular-i18n": "1.4.0-rc.2",
-    "angular-mocks": "1.4.0-rc.2",
     "angular-loading-bar": "0.7.1",
+    "angular-materialize": "*",
+    "angular-mocks": "1.4.0-rc.2",
     "angular-re-captcha": "0.2.0",
     "angular-resource": "1.4.0-rc.2",
     "angular-route": "1.4.0-rc.2",
     "angular-sanitize": "1.4.0-rc.2",
+    "angular-selection-model": "~0.8.4",
+    "angular-touch": "1.4.0-rc.2",
     "angular-translate": "2.7.0",
     "angular-translate-loader-partial": "2.7.0",
     "angular-translate-loader-static-files": "2.7.0",
     "angular-translate-storage-cookie": "2.7.0",
     "angular-translate-storage-local": "2.7.0",
-    "angular-touch": "1.4.0-rc.2",
+    "angular-ui-mask": "~1.3.0",
     "angular-wizard": "0.5.3",
     "font-awesome": "4.3.0",
-    "jquery": "2.1.4",
-    "momentjs": "2.8.1",
-    "materialize": "0.96.1",
-    "sugar": "1.4.1",
-    "toastr": "2.1.0",
     "html5shiv": "~3.7.2",
-    "respond": "~1.4.2",
+    "jquery": "2.1.4",
+    "Materialize": "materialize#~0.97.0",
+    "momentjs": "2.8.1",
     "ngAutocomplete": "~1.0.0",
-    "angular-ui-mask": "~1.3.0",
-    "angular-selection-model": "~0.8.4",
-    "ngmap": "~1.11.5"
+    "ngmap": "~1.11.5",
+    "respond": "~1.4.2",
+    "sugar": "1.4.1",
+    "toastr": "2.1.0"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
