--- a/bower.json
+++ b/bower.json
@@ -40,6 +40,7 @@
     "angular-translate-storage-local": "2.7.0",
     "angular-ui-mask": "~1.3.0",
     "angular-wizard": "0.5.3",
+    "c3-angular": "~0.7.1",
     "font-awesome": "4.3.0",
     "html5shiv": "~3.7.2",
     "jquery": "2.1.4",
@@ -53,7 +54,6 @@
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
-    "angular-cookies": "1.4.0-rc.2",
-    "materialize": "~0.97.0"
+    "angular-cookies": "1.4.0-rc.2"
   }
 }
