Asana-66981374345698 : Lien vers home page du compte utilisateur

--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,7 @@
     "angular-translate-storage-cookie": "2.7.0",
     "angular-translate-storage-local": "2.7.0",
     "angular-ui-mask": "~1.3.0",
-    "angular-wizard": "0.5.3",
+    "angular-wizard": "~0.5.5",
     "c3-angular": "~0.7.1",
     "font-awesome": "4.3.0",
     "html5shiv": "~3.7.2",
