--- a/package.json
+++ b/package.json
@@ -10,53 +10,54 @@
     }
   },
   "scripts": {
-    "test": "gulp test"
+    "test": "gulp test",
+    "build": "gulp",
+    "watch": "gulp serve"
   },
   "devDependencies": {
-    "browser-sync": "^2.8.0",
-    "browser-sync-spa": "~1.0.2",
-    "chalk": "~0.5.1",
-    "concat-stream": "~1.4.7",
-    "del": "~1.1.1",
+    "browser-sync": "~2.9.11",
+    "browser-sync-spa": "~1.0.3",
+    "chalk": "~1.1.1",
+    "del": "~2.0.2",
+    "eslint-plugin-angular": "~0.12.0",
+    "estraverse": "~4.1.0",
     "gulp": "~3.9.0",
-    "gulp-angular-filesort": "~1.0.4",
-    "gulp-angular-templatecache": "~1.5.0",
-    "gulp-autoprefixer": "~2.1.0",
-    "gulp-csso": "~1.0.0",
-    "gulp-filter": "~2.0.2",
-    "gulp-flatten": "~0.0.4",
-    "gulp-inject": "~1.1.1",
-    "gulp-jsdoc": "^0.1.4",
-    "gulp-jshint": "~1.9.0",
-    "gulp-load-plugins": "~0.8.0",
-    "gulp-minify-html": "~0.1.7",
-    "gulp-ng-annotate": "~0.5.2",
+    "gulp-angular-filesort": "~1.1.1",
+    "gulp-angular-templatecache": "~1.8.0",
+    "gulp-autoprefixer": "~3.0.2",
+    "gulp-eslint": "~1.0.0",
+    "gulp-filter": "~3.0.1",
+    "gulp-flatten": "~0.2.0",
+    "gulp-inject": "~3.0.0",
+    "gulp-jsdoc": "^0.1.5",
+    "gulp-load-plugins": "~0.10.0",
+    "gulp-minify-css": "~1.2.1",
+    "gulp-minify-html": "~1.0.4",
+    "gulp-ng-annotate": "~1.1.0",
     "gulp-ng-config": "^1.2.1",
     "gulp-plato": "^1.0.2",
-    "gulp-protractor": "~0.0.12",
-    "gulp-rename": "~1.2.0",
-    "gulp-replace": "^0.5.3",
-    "gulp-rev": "~3.0.1",
-    "gulp-rev-replace": "~0.3.1",
-    "gulp-size": "~1.2.0",
-    "gulp-sourcemaps": "~1.3.0",
-    "gulp-uglify": "~1.1.0",
-    "gulp-useref": "~1.1.0",
-    "gulp-util": "~3.0.2",
-    "http-proxy": "~1.8.0",
-    "jshint-stylish": "~1.0.0",
-    "karma": "~0.12.31",
-    "karma-jasmine": "~0.3.1",
-    "karma-ng-html2js-preprocessor": "~0.1.2",
-    "karma-phantomjs-launcher": "~0.1.4",
-    "lodash": "~3.2.0",
-    "main-bower-files": "~2.5.0",
-    "merge-stream": "~0.1.7",
-    "plato": "^1.5.0",
-    "protractor": "~1.7.0",
-    "require-dir": "~0.1.0",
+    "gulp-protractor": "~1.0.0",
+    "gulp-rename": "~1.2.2",
+    "gulp-replace": "~0.5.4",
+    "gulp-rev": "~6.0.1",
+    "gulp-rev-replace": "~0.4.2",
+    "gulp-size": "~2.0.0",
+    "gulp-sourcemaps": "~1.6.0",
+    "gulp-uglify": "~1.4.1",
+    "gulp-useref": "~1.3.0",
+    "gulp-util": "~3.0.6",
+    "http-proxy-middleware": "~0.9.0",
+    "karma": "~0.13.10",
+    "karma-angular-filesort": "~1.0.0",
+    "karma-coverage": "~0.5.2",
+    "karma-jasmine": "~0.3.6",
+    "karma-ng-html2js-preprocessor": "~0.2.0",
+    "karma-phantomjs-launcher": "~0.2.1",
+    "lodash": "~3.10.1",
+    "main-bower-files": "~2.9.0",
+    "phantomjs": "~1.9.18",
     "uglify-save-license": "~0.4.1",
-    "wiredep": "~2.2.0",
+    "wiredep": "~2.2.2",
     "wrench": "~1.5.8"
   },
   "description": "",
