--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,6 @@
     "angular-file-upload": "2.1.1",
     "angular-i18n": "1.4.0-rc.2",
     "angular-loading-bar": "0.7.1",
-    "angular-materialize": "*",
     "angular-mocks": "1.4.0-rc.2",
     "angular-re-captcha": "0.2.0",
     "angular-resource": "1.4.0-rc.2",
@@ -44,13 +43,14 @@
     "font-awesome": "4.3.0",
     "html5shiv": "~3.7.2",
     "jquery": "2.1.4",
-    "materialize": "materialize#~0.97.2",
     "momentjs": "2.8.1",
     "ngAutocomplete": "~1.0.0",
     "ngmap": "~1.11.5",
     "respond": "~1.4.2",
     "sugar": "1.4.1",
-    "toastr": "2.1.0"
+    "toastr": "2.1.0",
+    "angular-materialize": "*",
+    "Materialize": "materialize#~0.97.3"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
