--- a/bower.json
+++ b/bower.json
@@ -48,8 +48,8 @@
     "ngmap": "~1.11.5",
     "respond": "~1.4.2",
     "sugar": "1.4.1",
-    "toastr": "2.1.0",
-    "angular-materialize": "*"
+    "angular-materialize": "*",
+    "toastr": "2.1.0"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
