--- a/bower.json
+++ b/bower.json
@@ -51,10 +51,12 @@
     "animate.css": "~3.4.0",
     "angular-materialize": "*",
     "toastr": "2.1.0",
-    "owl.carousel": "owlcarousel2#~2.0.0-beta.3"
+    "owl.carousel": "owlcarousel2#~2.0.0-beta.3",
+    "ng-password-strength": "~0.2.1"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
-    "angular-cookies": "1.4.0-rc.2"
+    "angular-cookies": "1.4.0-rc.2",
+    "lodash": "^3.0.1"
   }
 }
