--- a/nginx.conf
+++ b/nginx.conf
@@ -14,6 +14,6 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://192.168.60.23:8080;
+        proxy_pass %hive_url;
     }
 }
