--- a/bower.json
+++ b/bower.json
@@ -52,7 +52,8 @@
     "angular-materialize": "*",
     "toastr": "2.1.0",
     "owl.carousel": "owlcarousel2#~2.0.0-beta.3",
-    "ng-password-strength": "~0.2.1"
+    "ng-password-strength": "~0.2.1",
+    "ng-device-detector": "~2.0.2"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
