--- a/bower.json
+++ b/bower.json
@@ -53,7 +53,8 @@
     "toastr": "2.1.0",
     "owl.carousel": "owlcarousel2#~2.0.0-beta.3",
     "ng-password-strength": "~0.2.1",
-    "ng-device-detector": "~2.0.2"
+    "ng-device-detector": "~2.0.2",
+    "pickadate": "~3.5.6"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
