--- a/bower.json
+++ b/bower.json
@@ -51,7 +51,7 @@
     "animate.css": "~3.4.0",
     "angular-materialize": "*",
     "toastr": "2.1.0",
-    "owl.carousel": "owlcarousel2#~2.0.0-beta.3",
+    "owl.carousel": "~2.0.0-beta.3",
     "ng-password-strength": "~0.2.1",
     "ng-device-detector": "~2.0.2",
     "pickadate": "~3.5.6"
