--- a/bower.json
+++ b/bower.json
@@ -45,7 +45,6 @@
     "jquery": "2.1.4",
     "momentjs": "2.8.1",
     "ngAutocomplete": "~1.0.0",
-    "ngmap": "~1.11.5",
     "respond": "~1.4.2",
     "sugar": "1.4.1",
     "animate.css": "~3.4.0",
@@ -54,7 +53,8 @@
     "owl.carousel": "~2.0.0-beta.3",
     "ng-password-strength": "~0.2.1",
     "ng-device-detector": "~2.0.2",
-    "pickadate": "~3.5.6"
+    "pickadate": "~3.5.6",
+    "ngmap": "~1.16.6"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
