--- a/bower.json
+++ b/bower.json
@@ -53,8 +53,7 @@
     "owl.carousel": "~2.0.0-beta.3",
     "ng-password-strength": "~0.2.1",
     "ng-device-detector": "~2.0.2",
-    "pickadate": "~3.5.6",
-    "ngmap": "~1.16.6"
+    "pickadate": "~3.5.6"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
