--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "gulp-rev": "~6.0.1",
     "gulp-rev-replace": "~0.4.2",
     "gulp-size": "~2.0.0",
+    "gulp-sonar": "^2.0.0",
     "gulp-sourcemaps": "~1.6.0",
     "gulp-uglify": "~1.4.1",
     "gulp-useref": "~1.3.0",
