--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "gulp-sourcemaps": "~1.6.0",
     "gulp-uglify": "~1.4.1",
     "gulp-useref": "~1.3.0",
-    "gulp-util": "~3.0.6",
+    "gulp-util": "^3.0.7",
     "http-proxy-middleware": "~0.9.0",
     "karma": "~0.13.10",
     "karma-angular-filesort": "~1.0.0",
