--- a/bower.json
+++ b/bower.json
@@ -53,11 +53,17 @@
     "owl.carousel": "~2.0.0-beta.3",
     "ng-password-strength": "~0.2.1",
     "ng-device-detector": "~2.0.2",
-    "pickadate": "~3.5.6"
+    "pickadate": "~3.5.6",
+    "angular-send-feedback": "~1.0.2"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
     "angular-cookies": "1.4.0-rc.2",
     "lodash": "^3.0.1"
+  },
+  "overrides": {
+    "angular-send-feedback": {
+      "main": [ "dist/angular-send-feedback.min.js", "dist/angular-send-feedback.min.css"]
+    }
   }
 }
