Ajout du user connecté au feedback

--- a/bower.json
+++ b/bower.json
@@ -54,7 +54,7 @@
     "ng-password-strength": "~0.2.1",
     "ng-device-detector": "~2.0.2",
     "pickadate": "~3.5.6",
-    "angular-send-feedback": "~1.0.2"
+    "angular-send-feedback": "Giwi/angular-feedback#~1.0.3"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
@@ -62,8 +62,5 @@
     "lodash": "^3.0.1"
   },
   "overrides": {
-    "angular-send-feedback": {
-      "main": [ "dist/angular-send-feedback.min.js", "dist/angular-send-feedback.min.css"]
-    }
   }
 }
