--- a/bower.json
+++ b/bower.json
@@ -48,7 +48,7 @@
     "respond": "~1.4.2",
     "sugar": "1.4.1",
     "animate.css": "~3.4.0",
-    "angular-materialize": "*",
+    "angular-materialize": "0.1.3",
     "toastr": "2.1.0",
     "owl.carousel": "~2.0.0-beta.3",
     "ng-password-strength": "~0.2.1",
