--- a/bower.json
+++ b/bower.json
@@ -55,6 +55,7 @@
     "ng-device-detector": "~2.0.2",
     "pickadate": "~3.5.6",
     "angular-send-feedback": "Giwi/angular-feedback#~1.0.3",
+    "malhar-angular-dashboard": "Giwi/malhar-angular-dashboard#~2.0.1",
     "angular-google-analytics": "~1.1.6"
   },
   "resolutions": {
