--- a/conf/config.json
+++ b/conf/config.json
@@ -3,6 +3,7 @@
     "EnvironmentConfig": {
       "name": "development",
       "apiEndPoint": "http://localhost:8888",
+      "wsEndPoint": "http://localhost:8888",
       "useLoaderCache": false,
       "debugEnabled": true,
       "uaid" : "",
@@ -16,6 +17,7 @@
     "EnvironmentConfig": {
       "name": "recette",
       "apiEndPoint": "http://hive-qaobee.rhcloud.com",
+      "wsEndPoint": "http://hive-qaobee.rhcloud.com",
       "useLoaderCache": true,
       "debugEnabled": true,
       "uaid" : "",
@@ -29,6 +31,7 @@
     "EnvironmentConfig": {
       "name": "docker",
       "apiEndPoint": "",
+      "wsEndPoint": "https://hive.qaobee.com",
       "useLoaderCache": true,
       "debugEnabled": true,
       "uaid" : "UA-72906581-1",
