--- a/nginx.conf
+++ b/nginx.conf
@@ -12,7 +12,7 @@ server {
     location /eventbus {
             proxy_set_header HOST $host;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header origin "https://www.qaobee.com";
+            proxy_set_header origin $scheme://$host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
