--- a/bower.json
+++ b/bower.json
@@ -59,12 +59,14 @@
     "angular-google-analytics": "~1.1.6",
     "vertxbus": "*",
     "materialize": "~0.97.5",
-    "v-tabs": "~0.2.0"
+    "v-tabs": "~0.2.0",
+    "angular-file-saver": "~1.1.0"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
     "angular-cookies": "1.4.0-rc.2",
-    "lodash": "^3.0.1"
+    "lodash": "^3.0.1",
+    "jquery": "~2.2.2"
   },
   "overrides": {}
 }
