--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
 
     location / {
         root /data/www;
-        try_files $uri $uri/ @hive;
+#        try_files $uri $uri/ @hive;
     }
 
     location /eventbus {
@@ -36,4 +36,11 @@ server {
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_pass %hive_url;
     }
+#    location @hive {
+#        proxy_set_header HOST $host;
+#        proxy_set_header X-Forwarded-Proto $scheme;
+#        proxy_set_header X-Real-IP $remote_addr;
+#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#        proxy_pass http://192.168.60.23:8080;
+#    }
 }
