--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-load-plugins": "~0.10.0",
     "gulp-minify-css": "~1.2.1",
     "gulp-minify-html": "~1.0.4",
-    "gulp-ng-annotate": "~1.1.0",
+    "gulp-ng-annotate": "^2.0.0",
     "gulp-ng-config": "^1.2.1",
     "gulp-plato": "^1.0.2",
     "gulp-protractor": "~1.0.0",
@@ -44,7 +44,7 @@
     "gulp-size": "~2.0.0",
     "gulp-sonar": "^2.0.0",
     "gulp-sourcemaps": "~1.6.0",
-    "gulp-uglify": "~1.4.1",
+    "gulp-uglify": "^1.5.3",
     "gulp-useref": "~1.3.0",
     "gulp-util": "^3.0.7",
     "http-proxy-middleware": "~0.9.0",
