--- a/nginx.conf
+++ b/nginx.conf
@@ -1,12 +1,18 @@
+proxy_cache_path /data/cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m;
 server {
     gzip on;
     gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
 
     index index.html index.htm;
 
     location / {
         root /data/www;
-#        try_files $uri $uri/ @hive;
     }
 
     location /eventbus {
@@ -36,11 +42,4 @@ server {
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_pass %hive_url;
     }
-#    location @hive {
-#        proxy_set_header HOST $host;
-#        proxy_set_header X-Forwarded-Proto $scheme;
-#        proxy_set_header X-Real-IP $remote_addr;
-#        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#        proxy_pass http://192.168.60.23:8080;
-#    }
 }
