--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-eslint": "~1.0.0",
     "gulp-filter": "~3.0.1",
     "gulp-flatten": "~0.2.0",
+    "gulp-imagemin": "^3.0.1",
     "gulp-inject": "~3.0.0",
     "gulp-jsdoc": "^0.1.5",
     "gulp-load-plugins": "~0.10.0",
@@ -70,6 +71,5 @@
     "node": ">=0.10.0"
   },
   "author": "Qaobee Inc",
-  "license": "BSD-2-Clause",
-  "dependencies": {}
+  "license": "BSD-2-Clause"
 }
