--- a/bower.json
+++ b/bower.json
@@ -47,7 +47,7 @@
     "respond": "~1.4.2",
     "sugar": "1.4.1",
     "animate.css": "~3.4.0",
-    "angular-materialize": "0.1.9",
+    "angular-materialize": "0.2.1",
     "toastr": "2.1.2",
     "owl.carousel": "~2.0.0-beta.3",
     "ng-password-strength": "~0.2.1",
@@ -63,7 +63,8 @@
     "angular": "1.4.0-rc.2",
     "angular-cookies": "1.4.0-rc.2",
     "lodash": "^3.0.1",
-    "jquery": "~2.2.2"
+    "jquery": "~2.2.2",
+    "angular-materialize": "0.2.1"
   },
   "overrides": {}
 }
