--- a/conf/config.json
+++ b/conf/config.json
@@ -2,7 +2,7 @@
   "local": {
     "EnvironmentConfig": {
       "name": "development",
-      "apiEndPoint": "http://rec-hive.qaobee.com:8080",
+      "apiEndPoint": "http://localhost:8888",
       "useLoaderCache": false,
       "debugEnabled": true,
       "uaid" : "",
