--- a/bower.json
+++ b/bower.json
@@ -57,7 +57,8 @@
     "angular-google-analytics": "~1.1.6",
     "vertxbus": "*",
     "v-tabs": "~0.2.0",
-    "angular-file-saver": "~1.1.0"
+    "angular-file-saver": "~1.1.0",
+    "materialize-clockpicker": "~0.1.1"
   },
   "resolutions": {
     "angular": "1.4.0-rc.2",
@@ -66,5 +67,12 @@
     "jquery": "~2.2.2",
     "angular-materialize": "0.2.1"
   },
-  "overrides": {}
+  "overrides": {
+    "materialize-clockpicker": {
+      "main": [
+        "dist/js/materialize.clockpicker.js",
+        "dist/css/materialize.clockpicker.css"
+      ]
+    }
+  }
 }
