#mant0000087: [PRO-001] Modification donnée du profil

--- a/conf/config.json
+++ b/conf/config.json
@@ -6,7 +6,7 @@
       "useLoaderCache": false,
       "debugEnabled": true,
       "captchaKey" : "6LcTjvcSAAAAABAnHBqs95JQCdYNXToXMA30ksEF",
-      "uaid" : "",
+      "uaid" : "UA-72906581-1",
       "appMobile" : {
         "google" : "https://play.google.com/store/apps/details?id=com.qaobee.hand",
         "apple" : ""
