--- a/bower.json
+++ b/bower.json
@@ -58,7 +58,8 @@
     "v-tabs": "~0.2.0",
     "angular-file-saver": "~1.1.0",
     "materialize-clockpicker": "~0.1.1",
-    "angular-recaptcha": "^3.0.4"
+    "angular-recaptcha": "^3.0.4",
+    "materialize": "^0.97.7"
   },
   "resolutions": {
     "angular-cookies": "1.5.8",
