--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "QSwarm",
+  "name": "qswarm",
   "version": "0.0.1",
   "authors": [
     "Qaobee <contact@qaobee.com>"
@@ -60,7 +60,8 @@
     "materialize-clockpicker": "Giwi/materialize-clockpicker#^0.1.2",
     "angular-recaptcha": "^3.0.4",
     "angular-chips": "^1.0.8",
-    "materialize": "^0.97.8"
+    "materialize": "^0.97.8",
+    "angular-web-notifications": "^0.1.2"
   },
   "resolutions": {
     "angular-cookies": "1.5.8",
