--- a/bower.json
+++ b/bower.json
@@ -60,7 +60,7 @@
     "materialize-clockpicker": "Giwi/materialize-clockpicker#^0.1.2",
     "angular-recaptcha": "^3.0.4",
     "angular-chips": "^1.0.8",
-    "materialize": "0.97.8",
+    "materialize": "^0.97.8",
     "angular-web-notifications": "^0.1.2"
   },
   "resolutions": {
