--- a/bower.json
+++ b/bower.json
@@ -38,7 +38,7 @@
     "angular-ui-mask": "~1.3.0",
     "angular-wizard": "~0.5.5",
     "c3-angular": "~0.7.1",
-    "font-awesome": "4.6.0",
+    "font-awesome": "4.7.0",
     "html5shiv": "~3.7.2",
     "jquery": "2.1.4",
     "momentjs": "2.8.1",
@@ -75,6 +75,11 @@
       "main": [
         "dist/js/materialize.clockpicker.js",
         "dist/css/materialize.clockpicker.css"
+      ]
+    },
+    "font-awesome": {
+      "main": [
+        "css/font-awesome.css"
       ]
     }
   }
