--- a/bower.json
+++ b/bower.json
@@ -18,39 +18,39 @@
   "dependencies": {
     "angular": "1.5.10",
     "angular-animate": "1.5.10",
-    "angular-chart.js": "1.1.0",
+    "angular-chart.js": "1.1.1",
     "angular-cookies": "1.5.10",
-    "angular-dynamic-locale": "0.1.27",
-    "angular-file-upload": "2.3.4",
+    "angular-dynamic-locale": "0.1.32",
+    "angular-file-upload": "2.4.1",
     "angular-i18n": "1.5.10",
-    "angular-loading-bar": "0.7.1",
+    "angular-loading-bar": "0.9.0",
     "angular-mocks": "1.5.10",
     "angular-resource": "1.5.10",
     "angular-route": "1.5.10",
     "angular-sanitize": "1.5.10",
-    "angular-selection-model": "~0.8.4",
+    "angular-selection-model": "0.11.0",
     "angular-touch": "1.5.10",
-    "angular-translate": "^2.13.1",
-    "angular-translate-loader-partial": "2.7.0",
-    "angular-translate-loader-static-files": "2.7.0",
-    "angular-translate-storage-cookie": "2.7.0",
-    "angular-translate-storage-local": "2.7.0",
-    "angular-ui-mask": "~1.3.0",
-    "angular-wizard": "~0.5.5",
-    "c3-angular": "~0.7.1",
+    "angular-translate": "2.13.1",
+    "angular-translate-loader-partial": "2.13.1",
+    "angular-translate-loader-static-files": "2.13.1",
+    "angular-translate-storage-cookie": "2.13.1",
+    "angular-translate-storage-local": "2.13.1",
+    "angular-ui-mask": "1.8.7",
+    "angular-wizard": "0.10.0",
+    "c3-angular": "1.3.1",
     "font-awesome": "4.7.0",
     "html5shiv": "~3.7.2",
     "jquery": "2.1.4",
-    "momentjs": "2.8.1",
+    "momentjs": "2.17.1",
     "ngAutocomplete": "~1.0.0",
     "respond": "~1.4.2",
-    "sugar": "1.4.1",
-    "animate.css": "~3.4.0",
+    "sugar": "2.0.4",
+    "animate.css": "3.5.2",
     "angular-materialize": "0.2.1",
-    "toastr": "2.1.2",
-    "owl.carousel": "~2.0.0-beta.3",
+    "toastr": "2.1.3",
+    "owl.carousel": "2.2.0",
     "ng-password-strength": "~0.2.1",
-    "ng-device-detector": "~2.0.2",
+    "ng-device-detector": "3.0.1",
     "angular-send-feedback": "Giwi/angular-feedback#~1.0.3",
     "malhar-angular-dashboard": "Giwi/malhar-angular-dashboard#~2.0.2",
     "angular-google-analytics": "~1.1.7",
