--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,8 @@
 proxy_cache_path /data/cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m;
+upstream backend {
+    %hive_url
+}
+
 server {
     gzip on;
     gzip_disable "msie6";
@@ -24,7 +28,7 @@ server {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_pass %hive_url;
+            proxy_pass http://backend;
     }
 
     location /api {
@@ -32,7 +36,7 @@ server {
            proxy_set_header X-Forwarded-Proto $scheme;
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_pass %hive_url;
+           proxy_pass http://backend;
     }
 
     location /file {
@@ -40,6 +44,6 @@ server {
            proxy_set_header X-Forwarded-Proto $scheme;
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-           proxy_pass %hive_url;
+           proxy_pass http://backend;
     }
 }
