--- a/bower.json
+++ b/bower.json
@@ -46,7 +46,7 @@
     "respond": "~1.4.2",
     "sugar": "2.0.4",
     "animate.css": "3.5.2",
-    "angular-materialize": "0.2.1",
+    "angular-materialize": "0.2.2",
     "toastr": "2.1.3",
     "owl.carousel": "2.2.0",
     "ng-password-strength": "~0.2.1",
@@ -60,17 +60,20 @@
     "materialize-clockpicker": "Giwi/materialize-clockpicker#^0.1.2",
     "angular-recaptcha": "^4.0.3",
     "angular-chips": "^1.0.8",
-    "materialize": "^0.97.8",
+    "materialize": "^0.98.0",
     "angular-web-notifications": "^0.1.2",
-    "angular-scroll-animate": "^0.9.9"
+    "angular-scroll-animate": "^0.9.9",
+    "angular-slick": "^0.2.1",
+    "angular-slide-wrapper": "^0.1.8"
   },
   "resolutions": {
     "angular-cookies": "1.5.10",
     "lodash": "^3.0.1",
     "jquery": "2.1.4",
     "angular": "1.5.10",
-    "angular-materialize": "0.2.1",
-    "angular-translate": "^2.13.1"
+    "angular-materialize": "0.2.2",
+    "angular-translate": "^2.13.1",
+    "materialize": "^0.98.0"
   },
   "overrides": {
     "materialize-clockpicker": {
