--- a/bower.json
+++ b/bower.json
@@ -60,9 +60,8 @@
     "materialize-clockpicker": "Giwi/materialize-clockpicker#^0.1.2",
     "angular-recaptcha": "^4.0.3",
     "angular-chips": "^1.0.8",
-    "materialize": "^0.98.0",
+    "materialize": "0.98.0",
     "angular-web-notifications": "^0.1.2",
-    "angular-scroll-animate": "^0.9.9",
     "angular-slick": "^0.2.1",
     "angular-slide-wrapper": "^0.1.8"
   },
@@ -73,7 +72,7 @@
     "angular": "1.5.10",
     "angular-materialize": "0.2.2",
     "angular-translate": "^2.13.1",
-    "materialize": "^0.98.0"
+    "materialize": "0.98.0"
   },
   "overrides": {
     "materialize-clockpicker": {
