--- a/.jshintrc
+++ b/.jshintrc
@@ -36,6 +36,7 @@
     "beforeEach": false,
     "after": false,
     "afterEach": false,
-    "expect": false
+    "expect": false,
+    "Sugar": false
   }
 }
