QHBWEB-209 : Ajout Widget Origine et impact des tirs

--- a/.jshintrc
+++ b/.jshintrc
@@ -37,6 +37,7 @@
     "after": false,
     "afterEach": false,
     "expect": false,
-    "Sugar": false
+    "Sugar": false,
+    "Heatmap": false
   }
 }
