QHBWEB-209 : Ajout Widget Origine et impact des tirs

--- a/bower.json
+++ b/bower.json
@@ -63,7 +63,8 @@
     "angular-web-notifications": "^0.1.2",
     "angular-slick": "^0.2.1",
     "angular-slide-wrapper": "^0.1.8",
-    "heat": "^1.0.0"
+    "heat": "^1.0.0",
+    "image-map-resizer": "^1.0.3"
   },
   "resolutions": {
     "angular-cookies": "1.5.10",
