--- a/bower.json
+++ b/bower.json
@@ -65,7 +65,8 @@
     "angular-slide-wrapper": "^0.1.8",
     "heat": "^1.0.0",
     "image-map-resizer": "^1.0.3",
-    "angular-payments": "*"
+    "angular-payments": "*",
+    "angular-intro.js": "^3.3.0"
   },
   "resolutions": {
     "angular-cookies": "1.5.10",
