--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "gulp-useref": "~1.3.0",
     "gulp-util": "^3.0.7",
     "http-proxy-middleware": "~0.9.0",
+    "jsdoc": "^3.5.4",
     "karma": "~0.13.10",
     "karma-angular-filesort": "~1.0.0",
     "karma-coverage": "~0.5.2",
