fixes QHBWEB-257 : Bouton souscrire qui bloque

--- a/conf/config.json
+++ b/conf/config.json
@@ -18,7 +18,7 @@
       "name": "docker",
       "apiEndPoint": "",
       "useLoaderCache": true,
-      "debugEnabled": true,
+      "debugEnabled": false,
       "captchaKey" : "6LcTjvcSAAAAABAnHBqs95JQCdYNXToXMA30ksEF",
       "uaid" : "UA-72906581-1",
       "appMobile" : {
