--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,4 @@
-proxy_cache_path /data/cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m;
+# proxy_cache_path /data/cache levels=1:2 keys_zone=my_cache:10m max_size=10g inactive=60m;
 upstream backend {
     %hive_url
 }
@@ -41,6 +41,7 @@ server {
     location /file {
            proxy_set_header HOST $host;
            proxy_set_header X-Forwarded-Proto $scheme;
+           proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_pass http://backend;
