--- a/bower.json
+++ b/bower.json
@@ -66,7 +66,8 @@
     "image-map-resizer": "^1.0.3",
     "angular-payments": "*",
     "angular-intro.js": "^3.3.0",
-    "angular-easyfb": "^1.5.2"
+    "angular-easyfb": "^1.5.2",
+    "angular-timeline": "^1.7.0"
   },
   "resolutions": {
     "lodash": "^3.0.1",
