--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "gulp-flatten": "~0.2.0",
     "gulp-imagemin": "^3.0.1",
     "gulp-inject": "~3.0.0",
-    "gulp-jsdoc": "^0.1.5",
+    "gulp-jsdoc3": "^2.0.0",
     "gulp-load-plugins": "~0.10.0",
     "gulp-minify-css": "~1.2.1",
     "gulp-minify-html": "~1.0.4",
